// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MenuPage renders correctly 1`] = `
<main>
  <header />
  <section
    className="menu__section"
  >
    <div
      className="menu container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          data-cy="menuContent"
          ref={null}
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {
                    "children": "HTML",
                  },
                  "type": "p",
                },
              }
            }
          />
          <hr />
        </div>
        <div
          className="menu__image col-lg-4 col-md-6"
          data-cy="menuImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
        <div
          className="menu__image col-lg-4 col-md-6"
          data-cy="menuImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
        <div
          className="menu__image col-lg-4 col-md-6"
          data-cy="menuImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`MenuPageTemplate renders GatsbyImage 1`] = `
[
  <header />,
  <section
    className="menu__section"
  >
    <div
      className="menu container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          data-cy="menuContent"
          ref={null}
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          className="menu__image col-lg-4 col-md-6"
          data-cy="menuImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`MenuPageTemplate renders content correctly 1`] = `
[
  <header />,
  <section
    className="menu__section"
  >
    <div
      className="menu container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          data-cy="menuContent"
          ref={null}
        >
          <div>
            content
          </div>
          <hr />
        </div>
        <div
          className="menu__image col-lg-4 col-md-6"
          data-cy="menuImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`MenuPageTemplate renders html content correctly 1`] = `
[
  <header />,
  <section
    className="menu__section"
  >
    <div
      className="menu container"
      ref={null}
    >
      <div
        className="row"
        ref={null}
      >
        <div
          className="col-12"
          data-cy="menuContent"
          ref={null}
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": {
                  "$$typeof": Symbol(react.transitional.element),
                  "_owner": null,
                  "_store": {},
                  "key": null,
                  "props": {
                    "children": "HTML content",
                  },
                  "type": "p",
                },
              }
            }
          />
          <hr />
        </div>
        <div
          className="menu__image col-lg-4 col-md-6"
          data-cy="menuImage"
          ref={null}
        >
          <div
            onClick={[Function]}
          >
            <img
              alt="alt"
              src="src"
            />
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;
